# TGL-Rec

./: .gitignore  AGENTS.md  BASELINES.md  CODEX_PROMPTS.md  DATA_MANUAL_STEPS.md  EXPERIMENTS.md  PAPER_OUTLINE.md  PROJECT_CHARTER.md  README.md  ROADMAP.md  TASKS.md  pyproject.toml
.codex/: config.toml
configs/: baselines.yaml  datasets.yaml  experiment_matrix.yaml  stage_gates.yaml
docs/: RESEARCH_IDEA.md  amazon_data_setup.md  amazon_filtering_policy.md  baselines.md  data_format.md  dataset_readiness.md  dynamic_graph_encoder.md  evaluation_metrics.md  experiment_gates.md  experiment_protocol.md  failure_modes.md  frozen_experiment_protocol.md  leakage_protocol.md  literature_log.md  method_card_time_graph_evidence.md  oursmethod_ablation_plan.md  paper_experiment_matrix.md  paper_table_plan.md  phase_plan.md  pilot_protocol.md  pre_experiment_checklist.md  protocol_versions.md  reportable_rules.md  reproducibility.md  resource_budget.md  sequential_baselines.md
scripts/: README.md  README_GITHUB.md  aggregate_multiseed_results.py  audit_failures.py  bootstrap_env.sh  build_graph.py  build_lora_sft_data.py  check_amazon_schema.py  check_dataset_readiness.py  check_launch_readiness.py  check_lora_readiness.py  create_job_queue.py  create_launch_manifest.py  estimate_api_cost.py  estimate_deepseek_cost.py  estimate_paper_resources.py  estimate_pilot_resources.py  evaluate.py  evaluate_lora_8b.py  export_deepseek_tables.py  export_diagnostics.py  export_llm_diagnostics.py  export_lora_tables.py  export_main_accuracy_multiseed_tables.py  export_method_card.py  (+29 more)
(+423 files in other folders)
