[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tglrec"
version = "0.0.1"
description = "Temporal Graph-to-Language Retrieval for Need-Aware Sequential Recommendation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "networkx>=3.0",
  "joblib>=1.3",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.8"
]
models = [
  "torch",
  "sentence-transformers",
  "lightgbm"
]

[project.scripts]
tglrec = "tglrec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest_tmp/runtime5"
